ItogPreset editor. fix in ajaxPost